WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153278
[B3][Win64] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=153278
Summary
[B3][Win64] Compile fix.
peavo
Reported
2016-01-20 10:36:12 PST
MSVC does not accept that a class declared as exported also have members declared as exported. error C2487: '{dtor}': member of dll interface class may not be declared with dll interface
Attachments
Patch
(2.29 KB, patch)
2016-01-20 10:40 PST
,
peavo
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2016-01-20 10:40:42 PST
Created
attachment 269359
[details]
Patch
peavo
Comment 2
2016-01-20 11:26:56 PST
Thanks for reviewing :)
peavo
Comment 3
2016-01-20 12:00:09 PST
Committed
r195362
: <
http://trac.webkit.org/changeset/195362
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug