[B3][Win64] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=153278

Reviewed by Filip Pizlo.

MSVC does not accept that a class declared as exported also have members declared as exported.

* b3/B3Const32Value.h:
* b3/B3ControlValue.h:


Canonical link: https://commits.webkit.org/171354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195362 268f45cc-cd09-0410-ab3c-d52691b4dbfc